Added all images and description to class object item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MusicArtists</string>
+    <string name="app_name">Исполнители</string>
     <string name="albums_count">альбомов</string>
     <string name="tracks_count">песен</string>
 </resources>
