--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Исполнители</string>
     <string name="albums_count">альбомов</string>
     <string name="tracks_count">песен</string>
+    <string name="biografy_title_txt">Биография</string>
 </resources>
